fix flex layout issue in safari

--- a/src/main/webapp/less/90_project.less
+++ b/src/main/webapp/less/90_project.less
@@ -1104,7 +1104,6 @@ textarea {
 .col-leyenda, {
     text-align: center;
     width: 100px;
-    flex: 1;
     border-top: 1px solid @gray;
 }
 .col-leyenda, .col-leyenda-header{
